# RPGAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  debug.md  docker-compose.yml  fix_report.md  main.py  package-lock.json  pyproject.toml  requirements.txt  rpg_analyze_and_fix.py  rpg_self_test.py  simulate_game.py  start.sh  totest.md  ws_connect_test.js  ws_debug.js  ws_final_test.js  ws_full_test.js  ws_test.js  ws_test_recording.webm
.github/workflows/: ci.yml
api/: game_manager.py  models.py  server.py
api/routes/: games.py  logs.py
config/: settings.py
core/: context_builder.py  context_loader.py  game_master.py  gms_tools.py  prompt_builder.py  session.py
data/: database.py  three_little_pigs.db
docs/: debugging.md  设计构想-CG文生图系统.md  设计构想-gamepkg格式规范.md  设计构想-工具调用架构.md  设计构想-总览.md  设计构想-架构与分发方案.md  设计构想-隐藏数值系统.md
games/example/: meta.json  setting.md
games/qinmo_dazexiang/: meta.json  setting.md
games/test_game_001/: meta.json  setting.md
games/three_little_pigs/: meta.json  setting.md
games/xiaogang_test_001/: meta.json  setting.md
logs/: adventure_log_three_little_pigs.md
rpgagent/: __init__.py  cli.py  main.py  py.typed
rpgagent/api/: game_manager.py  models.py  server.py
rpgagent/config/: settings.py
rpgagent/core/: __init__.py  context_builder.py  context_loader.py  direct_llm_client.py  game_master.py  gms_tools.py  prompt_builder.py  session.py  (+1 more)
scripts/: test_game.py
static/: editor.html  index.html  market.html
systems/: __init__.py  combat.py  hidden_value.py  stats.py
tests/: conftest.py
(+97 files in other folders)
